docs/deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: incident-bot-docs
  name: incident-bot-docs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: incident-bot-docs
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: incident-bot-docs
    spec:
      containers:
        - name: incident-bot-docs
          image: eb129/incident-bot-docs
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 200m
              memory: 128M
            requests:
              cpu: 100m
              memory: 64M
