docs/deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: incident-bot-docs
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: incident-bot-docs
