docs/deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: incident-bot-docs
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: docs.incidentbot.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: incident-bot-docs
                port:
                  number: 80
